* process.c (redirect_close, parent_redirect_close): should not close   reserved FD. It should be closed in the exec system call due to the   O_CLOEXEC or FD_CLOEXEC flag. [Bug #11353] [ruby-core:69977]

* process.c (close_unless_reserved): new function to close FD unless
  it is reserved for internal communication.
      
* thread_pthread.c (rb_reserved_fd_p): should check owner_process pid
  to avoid false positive in forked child process.



git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51255 b2dd03c8-39d4-4d8f-98ff-823fe69b080e